--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,100 @@
+* {
+    margin: 0;
+}
+
 body {
     background-color: ghostwhite;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid black;
+    margin-bottom: 20px;
+}
+
+#headerLinks {
+    margin: 20px;
+    width: 100%;
+    margin-right: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+
+    transition: all 1s forwards;
+}
+
+.headerLink {
+    text-decoration: none;
+    color: black;
+    font-size: 25px;
+    font-family: Monaco;
+    margin: 0 10px 0 10px;
+}
+
+.headerLink:hover {
+    transform: scale(1.1);
+}
+
+#logo {
+    /* margin: 20px; */
+    margin-left: 20px;
+    font-size: 40px;
+    font-family: Monaco;
+}
+
+#form {
+    overflow: scroll;
+    position: relative;
+    width: 1px;
+    min-width: 100%;
+    *width: 100%;
+    border: 1px solid black;
+}
+#services {
+    width: 100%;
+    display: grid;
+    place-items: center;
+}
+
+#services h3 {
+    margin: 25px;
+}
+
+#toolButtons {
+    width: 50%;
+    display: flex;
+    justify-content: space-around;
+}
+
+#register {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    flex: 1 0 250px;
+}
+
+#register button {
+    display: grid;
+    place-items: center;
+    font-size: 20px;
+    margin: 25px;
+    background-color: transparent;
+}
+
+#register textarea {
+    background-color: blue;
+    color: yellow;
+    margin: 5px;
+    width: 200px;
+    height: 30px;
+    box-shadow: 1px 1px 2px black;
+    font-family: Montserrat;
+}
+#register ::placeholder {
+    opacity: 1;
+    color: whitesmoke;
+    text-align: center;
 }
