--- a/client/style.css
+++ b/client/style.css
@@ -9,14 +9,62 @@ body {
 }
 
 header {
+    margin: 0 20px;
     display: flex;
     align-items: center;
     border-bottom: 1px solid black;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     overflow: hidden;
 }
 
+#logo {
+    text-decoration: none;
+    color: black;
+}
+
+#logo:hover{
+    background-color: none;
+}
+
+#landing-container {
+    position: absolute;
+    width: 100%;
+    height: 90%;
+    display: grid;
+    place-items: center;
+    /* color: peachpuff; */
+}
+
+#landing {
+    width: 60%;
+}
+
+#landing * {
+    text-align: center;
+    margin: 0 auto;
+}
+
+/* #normal {
+    background: url('https://i.pinimg.com/564x/dd/02/20/dd022014b3560dbbfd409868b20e6a21.jpg');
+    background-size: cover;
+    background-position: top;
+} */
+
+#lang {
+    background: black;
+    color: white;
+    height: 27px;
+    margin-left: 7px;
+}
+
+.app {
+    position: relative;
+    min-height: 100vh;
+}
+
 #app-container {
+    
+    position: relative;
     margin: 25px;
 }
 
@@ -27,10 +75,42 @@ header {
 #searchbar {
     width: 300px;
     height: 25px;
+    margin-bottom: 0;
 }
 
 #searchBarElements {
+    position: relative;
     margin: 25px;
+}
+#searchBarElements * {
+    margin: 5px;
+}
+
+#seeMap {
+    width: 120px;
+    position: absolute;
+    right: 2px;
+}
+
+#filters-container {
+    position: relative;
+    height: 30px;
+}
+
+#filters {
+    position: absolute;
+    z-index: 5000;
+    padding: 5px;
+    padding-bottom: 10px;
+}
+
+#filters[open] {
+        background-color: rgba(221, 160, 221, 0.97);
+    box-shadow: 2px 2px 3px  rgba(0, 0, 0, 0.829);
+}
+
+#summaryOfFilters {
+    background-color: none;
 }
 
 #searchHidden {
@@ -41,7 +121,11 @@ header {
     width: 300px;
     background-color: white;
     position: absolute;
-    z-index: 1;
+    z-index: 5001;
+    margin-top: -5px;
+}
+.searchMatch p:hover{
+    background-color: rgba(23, 121, 249, 0.685);
 }
 
 #headerLinks {
@@ -67,17 +151,15 @@ header {
 }
 
 .dropbtn {
-
 }
 
 .dropdown-content {
     display: none;
     position: absolute;
     background-color: ghostwhite;
-   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
 }
 
 .dropdown-content a {
@@ -89,12 +171,13 @@ header {
     display: block;
     text-align: left;
     background-color: ghostwhite;
-      text-align: center;
-      font-style: Monaco;
+    text-align: center;
+    font-style: Monaco;
 }
 
-header a:hover, .dropdown:hover .dropbtn {
-  background-color: pink;
+header a:hover,
+.dropdown:hover .dropbtn {
+    background-color: pink;
 }
 
 .dropdown:hover .dropdown-content {
@@ -170,13 +253,15 @@ header a:hover, .dropdown:hover .dropbtn {
 
 #services {
     margin: 25px;
-    border: 1px solid orange;
+    /* border: 1px solid orange; */
     padding: 5px;
     display: flex;
     flex-wrap: wrap;
-    flex: 1 0 200px;
+    justify-content: center;
+    flex: 1 1 200px;
     font-family: Montserrat;
 }
+
 
 .service {
     position: relative;
@@ -187,13 +272,20 @@ header a:hover, .dropdown:hover .dropbtn {
     box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.644);
     text-align: central;
     animation: fade-in-services 1s forwards;
+    background-color:rgba(245, 245, 245, 0.671);
+   
 }
 
 .service h4 {
     margin: 10px;
 }
 
-.type, .specialty {
+summary {
+    cursor: pointer;
+}
+
+.type,
+.specialty {
     position: absolute;
     top: 5px;
     right: 5px;
@@ -205,47 +297,60 @@ header a:hover, .dropdown:hover .dropbtn {
     right: 6px;
 }
 
-.linkToProfile, .contactLink {
+.linkToProfile,
+.contactLink {
     text-decoration: none;
-    color:rgba(23, 75, 249, 0.982)
+    color: rgba(23, 75, 249, 0.982);
 }
 
 .description {
     margin: 10px;
 }
 
-
 #serviceProfileContainer {
     margin: 25px;
-    
-
+    width: 95%;
+    height: 90vh;
+    display: flex;
+    justify-content: center;
+    /* align-items: center; */
 }
 
 .serviceProfile {
     position: absolute;
     margin: 0 auto;
     width: 60%;
-    text-align: center;
+    /* text-align: center; */
     border: 1px solid rgba(255, 136, 202, 0.817);
-    box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.644)
+    box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.644);
 }
 
-.serviceProfile * {
+.serviceProfile {
+    padding: 10px;
+}
+
+#notMap * {
     margin: 10px;
 }
 
-.contactInfo { 
+.contactInfo {
     text-align: left;
 }
 
-/* #mapid { height: 230px; } */
+#mapid {
+    height: 600px;
+    display: flex;
+    flex: 1 1 auto;
+}
+
+.popup {
+    text-align: center;
+}
 
 /* .leaflet-container, .leaflet-touch-drag, .leaflet-touch-zoom{
    
     height: 300px;
 } */
-
-
 
 @keyframes fade-in-services {
     0% {
@@ -255,5 +360,32 @@ header a:hover, .dropdown:hover .dropbtn {
     100% {
         opacity: 1;
         transform: scale(1);
+    }
+}
+
+/* @media screen and (prefers-color-scheme: dark) {
+    body {
+        background: black;
+        color: white;
+    }
+
+    
+} */
+
+@media only screen 
+  and (min-device-width: 300px) 
+  and (max-device-width: 812px) 
+  /* and (-webkit-min-device-pixel-ratio: 3) */
+   { 
+    #mapid {
+        height: 1800px;
+    }
+
+    #services {
+        flex-direction: column;
+    }
+
+    .service {
+        width: 95%;
     }
 }
