--- a/client/style.css
+++ b/client/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: Montserrat;
+    
 }
 
 body {
@@ -35,8 +36,13 @@ header {
     /* color: peachpuff; */
 }
 
+#test {
+    height: 100vh;
+}
+
 #landing {
-    width: 60%;
+    width: 45%;
+    height: 70%;
 }
 
 #landing * {
@@ -44,17 +50,23 @@ header {
     margin: 0 auto;
 }
 
-/* #normal {
+#landing p {
+    font-size: 18px;
+}
+
+#normal {
     background: url('https://i.pinimg.com/564x/dd/02/20/dd022014b3560dbbfd409868b20e6a21.jpg');
     background-size: cover;
     background-position: top;
-} */
+}
 
 #lang {
     background: black;
     color: white;
-    height: 27px;
+    /* height: 27px; */
     margin-left: 7px;
+    font-size: 18px;
+
 }
 
 .app {
@@ -76,11 +88,19 @@ header {
     width: 300px;
     height: 25px;
     margin-bottom: 0;
+    background-color: rgba(255, 255, 255, 0.836);
+   
 }
 
 #searchBarElements {
     position: relative;
     margin: 25px;
+    
+}
+
+#searchBarElements h1 {
+     color: rgb(252, 0, 0);
+     text-shadow: .5px .5px .5px  rgba(0, 0, 0, 1);
 }
 #searchBarElements * {
     margin: 5px;
@@ -144,7 +164,8 @@ header {
     background-color: transparent;
     border: none;
     text-decoration: none;
-    color: black;
+    color: rgb(255, 243, 232);
+    text-shadow: 0.5px 0.5px 2.5px black;
     font-size: 25px;
     font-family: Monaco;
     margin: 0 10px 0 10px;
@@ -173,6 +194,10 @@ header {
     background-color: ghostwhite;
     text-align: center;
     font-style: Monaco;
+}
+
+.dropDown {
+    margin: 0;
 }
 
 header a:hover,
@@ -307,7 +332,13 @@ summary {
     margin: 10px;
 }
 
+.description p {
+    padding-top: 7px;
+    padding-bottom: 20px;
+}
+
 #serviceProfileContainer {
+    position: relative;
     margin: 25px;
     width: 95%;
     height: 90vh;
@@ -316,31 +347,112 @@ summary {
     /* align-items: center; */
 }
 
+#goBack {
+    position: absolute;
+    left: 0px;
+    top: -16px;
+    text-decoration: none;  
+    font-size: 18px;
+    color: rgba(23, 75, 249, 0.982);
+}
+
+
 .serviceProfile {
+    overflow: scroll;
     position: absolute;
     margin: 0 auto;
     width: 60%;
+    background-color:rgba(245, 245, 245, 0.671);
     /* text-align: center; */
     border: 1px solid rgba(255, 136, 202, 0.817);
     box-shadow: 1px 1px 2px 1px rgba(0, 0, 0, 0.644);
 }
 
+.profileAttributes, .servicesAttributes {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    flex: 1 0 100px;
+    margin-bottom: 20px;
+}
+
+.servicesAttributes {
+    margin: 0 10px 25px 10px;
+}
+
+
+
+.servicesAttributes span {
+    margin: 5px;
+    font-size: 12px;
+}
+
+
 .serviceProfile {
     padding: 10px;
 }
 
-#notMap * {
+
+
+#notMap h2, #notMap span, #notMap details  {
     margin: 10px;
+}
+
+#serviceSchedule {
+    margin-top: 20px;
+}
+
+#serviceSchedule * {
+    margin: 7px;
+}
+
+#serviceSchedule summary {
+    font-size: 20px;
 }
 
 .contactInfo {
     text-align: left;
+    margin: 10px;
+    margin-left: 0;
 }
+
+.contactInfo * {
+    margin: 7px;
+}
+
+.label {
+    padding: 5px;
+    background-color: cornflowerblue;
+    color:whitesmoke
+}
+
+#urgent-container {
+    position: relative;
+    width: 200px;
+    height: 50px;
+}
+
+#urgentSchedule {
+    width: 260px;
+    position: absolute;
+    z-index: 200;
+    margin-bottom: 10px;
+}
+#urgentSchedule p {
+    margin: 7px;
+}
+
+
 
 #mapid {
     height: 600px;
     display: flex;
     flex: 1 1 auto;
+}
+
+#labels {
+    z-index: 20;
 }
 
 .popup {
